--- a/SafePocket/Base.lproj/LaunchScreen.storyboard
+++ b/SafePocket/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_p.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="7bC-Kc-FG0">
+                                <rect key="frame" x="208" y="207" width="184" height="187"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_aci.png" translatesAutoresizingMaskIntoConstraints="NO" id="tdd-EP-ib9">
+                                <rect key="frame" x="353" y="431" width="39" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="39" id="Si2-3S-X5x"/>
+                                    <constraint firstAttribute="height" constant="37" id="qgF-CV-Vxq"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7bC-Kc-FG0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="60n-gp-7fz"/>
+                            <constraint firstItem="7bC-Kc-FG0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="8OS-xd-1SO"/>
+                            <constraint firstItem="tdd-EP-ib9" firstAttribute="top" secondItem="7bC-Kc-FG0" secondAttribute="bottom" constant="37" id="G41-Jc-iKi"/>
+                            <constraint firstItem="tdd-EP-ib9" firstAttribute="trailing" secondItem="7bC-Kc-FG0" secondAttribute="trailing" id="zSz-BZ-zBf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +42,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo_aci.png" width="150" height="150"/>
+        <image name="logo_p.jpg" width="184" height="187"/>
+    </resources>
 </document>
