--- a/SafePocket/Base.lproj/Main.storyboard
+++ b/SafePocket/Base.lproj/Main.storyboard
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +18,223 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please authenticate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6b-kU-Nkt">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fingerprint.png" translatesAutoresizingMaskIntoConstraints="NO" id="b1y-Sb-Zdk">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="down.png" translatesAutoresizingMaskIntoConstraints="NO" id="LwR-cI-Sxh">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UVz-Ui-nGo">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="&gt;"/>
+                                <connections>
+                                    <action selector="goToLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eVg-Gj-UHL"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="J6b-kU-Nkt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="72m-Wl-Aid"/>
+                            <constraint firstItem="UVz-Ui-nGo" firstAttribute="leading" secondItem="b1y-Sb-Zdk" secondAttribute="trailing" constant="16" id="ATx-fe-YTV"/>
+                            <constraint firstItem="LwR-cI-Sxh" firstAttribute="trailing" secondItem="b1y-Sb-Zdk" secondAttribute="trailing" id="GPG-EG-Fcc"/>
+                            <constraint firstItem="LwR-cI-Sxh" firstAttribute="leading" secondItem="b1y-Sb-Zdk" secondAttribute="leading" id="HaC-R8-qSd"/>
+                            <constraint firstItem="J6b-kU-Nkt" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Nqs-gT-A0Y">
+                                <variation key="widthClass=compact" constant="-162.5"/>
+                            </constraint>
+                            <constraint firstItem="b1y-Sb-Zdk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Yr1-HK-hev"/>
+                            <constraint firstItem="b1y-Sb-Zdk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dgp-S0-L42">
+                                <variation key="widthClass=compact" constant="95"/>
+                            </constraint>
+                            <constraint firstItem="UVz-Ui-nGo" firstAttribute="bottom" secondItem="b1y-Sb-Zdk" secondAttribute="bottom" id="k8A-Od-4YY"/>
+                            <constraint firstItem="b1y-Sb-Zdk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="myl-TO-1D3"/>
+                            <constraint firstItem="LwR-cI-Sxh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rJA-tY-zl4"/>
+                            <constraint firstItem="LwR-cI-Sxh" firstAttribute="top" secondItem="b1y-Sb-Zdk" secondAttribute="bottom" constant="8" id="s6Y-sj-tHu">
+                                <variation key="widthClass=compact" constant="15"/>
+                            </constraint>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="J6b-kU-Nkt"/>
+                                <exclude reference="b1y-Sb-Zdk"/>
+                                <exclude reference="LwR-cI-Sxh"/>
+                                <exclude reference="UVz-Ui-nGo"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="ATx-fe-YTV"/>
+                                <exclude reference="k8A-Od-4YY"/>
+                                <exclude reference="72m-Wl-Aid"/>
+                                <exclude reference="Nqs-gT-A0Y"/>
+                                <exclude reference="GPG-EG-Fcc"/>
+                                <exclude reference="HaC-R8-qSd"/>
+                                <exclude reference="rJA-tY-zl4"/>
+                                <exclude reference="s6Y-sj-tHu"/>
+                                <exclude reference="Yr1-HK-hev"/>
+                                <exclude reference="dgp-S0-L42"/>
+                                <exclude reference="myl-TO-1D3"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="J6b-kU-Nkt"/>
+                                <include reference="b1y-Sb-Zdk"/>
+                                <include reference="LwR-cI-Sxh"/>
+                                <include reference="UVz-Ui-nGo"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="ATx-fe-YTV"/>
+                                <include reference="k8A-Od-4YY"/>
+                                <include reference="72m-Wl-Aid"/>
+                                <include reference="Nqs-gT-A0Y"/>
+                                <include reference="GPG-EG-Fcc"/>
+                                <include reference="HaC-R8-qSd"/>
+                                <include reference="rJA-tY-zl4"/>
+                                <include reference="s6Y-sj-tHu"/>
+                                <include reference="Yr1-HK-hev"/>
+                                <include reference="dgp-S0-L42"/>
+                                <include reference="myl-TO-1D3"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="arrowImageView" destination="LwR-cI-Sxh" id="Ute-jt-UAB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="304.5" y="362"/>
+        </scene>
+        <!--Transactions-->
+        <scene sceneID="WbY-8y-Fax">
+            <objects>
+                <tableViewController storyboardIdentifier="transactionsVC" title="Transactions" id="cc2-aN-22Y" customClass="TransactionsViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Yd0-3a-G0W">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0G0-7U-YNZ">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0G0-7U-YNZ" id="FSJ-tS-374">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cc2-aN-22Y" id="Rcp-wq-nXE"/>
+                            <outlet property="delegate" destination="cc2-aN-22Y" id="txZ-eU-hOA"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EXN-hV-Da9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="304.5" y="1092"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="Pza-OW-ILO">
+            <objects>
+                <viewController storyboardIdentifier="loginVC" id="dGZ-F8-8tw" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XLi-68-uQQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="f9F-aM-hYX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Gef-eI-uWr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="974-k2-L8U">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dGZ-F8-8tw" id="8HM-Cc-gUO"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pj2-On-kzq">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="loginBtnPressed:" destination="dGZ-F8-8tw" eventType="touchUpInside" id="UAw-fV-Suy"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aea-Rd-zVN">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dGZ-F8-8tw" id="g7R-oc-QCv"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pj2-On-kzq" firstAttribute="centerX" secondItem="Gef-eI-uWr" secondAttribute="centerX" id="0Ni-DQ-jAC"/>
+                            <constraint firstItem="974-k2-L8U" firstAttribute="centerY" secondItem="Gef-eI-uWr" secondAttribute="centerY" id="3Pt-LH-uxT">
+                                <variation key="widthClass=compact" constant="-22"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="Aea-Rd-zVN" secondAttribute="trailing" constant="50" id="4nI-zj-KH4"/>
+                            <constraint firstItem="974-k2-L8U" firstAttribute="top" secondItem="Aea-Rd-zVN" secondAttribute="bottom" constant="50" id="9tk-Uk-5Eu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="974-k2-L8U" secondAttribute="trailing" constant="50" id="CmG-ng-9Hc"/>
+                            <constraint firstItem="Aea-Rd-zVN" firstAttribute="leading" secondItem="Gef-eI-uWr" secondAttribute="leadingMargin" constant="50" id="i84-Rf-up6"/>
+                            <constraint firstItem="974-k2-L8U" firstAttribute="leading" secondItem="Gef-eI-uWr" secondAttribute="leadingMargin" constant="50" id="r3c-dc-wYr"/>
+                            <constraint firstItem="pj2-On-kzq" firstAttribute="top" secondItem="974-k2-L8U" secondAttribute="bottom" constant="37" id="s6R-3H-hYh"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="974-k2-L8U"/>
+                                <exclude reference="pj2-On-kzq"/>
+                                <exclude reference="Aea-Rd-zVN"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="3Pt-LH-uxT"/>
+                                <exclude reference="9tk-Uk-5Eu"/>
+                                <exclude reference="CmG-ng-9Hc"/>
+                                <exclude reference="r3c-dc-wYr"/>
+                                <exclude reference="4nI-zj-KH4"/>
+                                <exclude reference="i84-Rf-up6"/>
+                                <exclude reference="0Ni-DQ-jAC"/>
+                                <exclude reference="s6R-3H-hYh"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="974-k2-L8U"/>
+                                <include reference="pj2-On-kzq"/>
+                                <include reference="Aea-Rd-zVN"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="3Pt-LH-uxT"/>
+                                <include reference="9tk-Uk-5Eu"/>
+                                <include reference="CmG-ng-9Hc"/>
+                                <include reference="r3c-dc-wYr"/>
+                                <include reference="4nI-zj-KH4"/>
+                                <include reference="i84-Rf-up6"/>
+                                <include reference="0Ni-DQ-jAC"/>
+                                <include reference="s6R-3H-hYh"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="passTextField" destination="974-k2-L8U" id="Zdw-12-Nhw"/>
+                        <outlet property="userTextField" destination="Aea-Rd-zVN" id="JRA-eM-LB2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xUv-Jj-Xgp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1038" y="362"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="down.png" width="48" height="66"/>
+        <image name="fingerprint.png" width="200" height="200"/>
+    </resources>
 </document>
