--- a/SafePocket/Base.lproj/Main.storyboard
+++ b/SafePocket/Base.lproj/Main.storyboard
@@ -120,12 +120,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0G0-7U-YNZ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="transactions_cell" editingAccessoryType="detailDisclosureButton" textLabel="eXh-dq-5dV" detailTextLabel="x1N-GL-A75" style="IBUITableViewCellStyleValue1" id="0G0-7U-YNZ">
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0G0-7U-YNZ" id="FSJ-tS-374">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="561" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eXh-dq-5dV">
+                                            <rect key="frame" x="15" y="11" width="34" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="widthClass=compact">
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            </variation>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="x1N-GL-A75">
+                                            <rect key="frame" x="517" y="11" width="44" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="widthClass=compact">
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            </variation>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -134,10 +156,11 @@
                             <outlet property="delegate" destination="cc2-aN-22Y" id="txZ-eU-hOA"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="zR8-cm-dTy"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXN-hV-Da9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="304.5" y="1092"/>
+            <point key="canvasLocation" x="1222.5" y="1092"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="Pza-OW-ILO">
@@ -174,6 +197,9 @@
                                     <outlet property="delegate" destination="dGZ-F8-8tw" id="g7R-oc-QCv"/>
                                 </connections>
                             </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_background.png" translatesAutoresizingMaskIntoConstraints="NO" id="w1R-Gr-dy6">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -184,25 +210,36 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Aea-Rd-zVN" secondAttribute="trailing" constant="50" id="4nI-zj-KH4"/>
                             <constraint firstItem="974-k2-L8U" firstAttribute="top" secondItem="Aea-Rd-zVN" secondAttribute="bottom" constant="50" id="9tk-Uk-5Eu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="974-k2-L8U" secondAttribute="trailing" constant="50" id="CmG-ng-9Hc"/>
+                            <constraint firstItem="f9F-aM-hYX" firstAttribute="top" secondItem="w1R-Gr-dy6" secondAttribute="bottom" id="GWx-LC-6RL"/>
+                            <constraint firstItem="w1R-Gr-dy6" firstAttribute="leading" secondItem="Gef-eI-uWr" secondAttribute="leading" id="e6G-fv-Ntw"/>
                             <constraint firstItem="Aea-Rd-zVN" firstAttribute="leading" secondItem="Gef-eI-uWr" secondAttribute="leadingMargin" constant="50" id="i84-Rf-up6"/>
+                            <constraint firstItem="w1R-Gr-dy6" firstAttribute="top" secondItem="XLi-68-uQQ" secondAttribute="bottom" id="p9C-6h-1sT">
+                                <variation key="widthClass=compact" constant="-20"/>
+                            </constraint>
                             <constraint firstItem="974-k2-L8U" firstAttribute="leading" secondItem="Gef-eI-uWr" secondAttribute="leadingMargin" constant="50" id="r3c-dc-wYr"/>
                             <constraint firstItem="pj2-On-kzq" firstAttribute="top" secondItem="974-k2-L8U" secondAttribute="bottom" constant="37" id="s6R-3H-hYh"/>
+                            <constraint firstAttribute="trailing" secondItem="w1R-Gr-dy6" secondAttribute="trailing" id="yP0-Cy-A6B"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="974-k2-L8U"/>
                                 <exclude reference="pj2-On-kzq"/>
                                 <exclude reference="Aea-Rd-zVN"/>
+                                <exclude reference="w1R-Gr-dy6"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="e6G-fv-Ntw"/>
+                                <exclude reference="p9C-6h-1sT"/>
+                                <exclude reference="yP0-Cy-A6B"/>
+                                <exclude reference="4nI-zj-KH4"/>
+                                <exclude reference="i84-Rf-up6"/>
                                 <exclude reference="3Pt-LH-uxT"/>
                                 <exclude reference="9tk-Uk-5Eu"/>
                                 <exclude reference="CmG-ng-9Hc"/>
                                 <exclude reference="r3c-dc-wYr"/>
-                                <exclude reference="4nI-zj-KH4"/>
-                                <exclude reference="i84-Rf-up6"/>
                                 <exclude reference="0Ni-DQ-jAC"/>
                                 <exclude reference="s6R-3H-hYh"/>
+                                <exclude reference="GWx-LC-6RL"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -210,16 +247,21 @@
                                 <include reference="974-k2-L8U"/>
                                 <include reference="pj2-On-kzq"/>
                                 <include reference="Aea-Rd-zVN"/>
+                                <include reference="w1R-Gr-dy6"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="e6G-fv-Ntw"/>
+                                <include reference="p9C-6h-1sT"/>
+                                <include reference="yP0-Cy-A6B"/>
+                                <include reference="4nI-zj-KH4"/>
+                                <include reference="i84-Rf-up6"/>
                                 <include reference="3Pt-LH-uxT"/>
                                 <include reference="9tk-Uk-5Eu"/>
                                 <include reference="CmG-ng-9Hc"/>
                                 <include reference="r3c-dc-wYr"/>
-                                <include reference="4nI-zj-KH4"/>
-                                <include reference="i84-Rf-up6"/>
                                 <include reference="0Ni-DQ-jAC"/>
                                 <include reference="s6R-3H-hYh"/>
+                                <include reference="GWx-LC-6RL"/>
                             </mask>
                         </variation>
                     </view>
@@ -232,9 +274,28 @@
             </objects>
             <point key="canvasLocation" x="1038" y="362"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8y8-1G-HUx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rxL-EQ-lWb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="05X-qu-BbP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cc2-aN-22Y" kind="relationship" relationship="rootViewController" id="tuj-kP-0RW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zu6-5W-QoY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="304.5" y="1092"/>
+        </scene>
     </scenes>
     <resources>
         <image name="down.png" width="48" height="66"/>
         <image name="fingerprint.png" width="200" height="200"/>
+        <image name="login_background.png" width="1066" height="600"/>
     </resources>
 </document>
